--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  padding-top: 60px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div {
+  padding: 15px;
+  border: solid  rgb(129, 147, 237);
+  border-width: 1,5px;
+  border-style: groove;
+  border-radius: 20px;
+  
+}
+
+
